--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
+/* --------  Global styles  --------*/
+:root {
+  --clr-bcg: honeydew;
+  --clr-font: #494949;
+  --clr-primary: #d23669;
+  --clr-post: rgb(154, 65, 255);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.darkTheme {
+  --clr-bcg: #282c35;
+  --clr-font: #fff;
+  --clr-primary: #ffa7c4;
+  --clr-post: rgb(177, 146, 212);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.lightTheme {
+  --clr-bcg: honeydew;
+  --clr-font: #494949;
+  --clr-primary: #d23669;
+  --clr-post: rgb(154, 65, 255);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background: var(--clr-bcg);
+  color: var(--clr-font);
+  line-height: 1.5;
+  font-size: 0.875rem;
+  transition: all 0.3s linear;
+}
+/* --------  Global styles --------*/
+.container {
+  width: 90%;
+  margin: 2rem auto;
+}
+.navbar {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--clr-font);
+  padding-bottom: 1.5rem;
+  margin: 1rem 0 4rem;
 }
-
-.App-link {
-  color: #61dafb;
+.nav-title h1 {
+  color: var(--clr-primary);
+  margin: 0;
+  letter-spacing: 0.1rem;
+  font-style: italic;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-link {
+  border: none;
+  background-color: transparent;
+  padding: 0.6rem 0;
+  font-size: medium;
+  color: var(--clr-primary);
+  font-weight: 500;
+}
+.nav-links {
+  width: 30%;
+  display: flex;
+  justify-content: space-between;
+}
+.btn-theme {
+  background-color: var(--clr-primary);
+  font-weight: 500;
+  font-size: medium;
+  padding: 0.6rem;
+  border-radius: 0.4rem;
+  border: 1px solid var(--clr-primary);
+  color: azure;
+  cursor: pointer;
+}
+.post h4 {
+  color: var(--clr-post);
+  text-transform: capitalize;
+}
+.post p {
+  color: var(--clr-font);
 }
